# riot-lang

./: .dockerignore  .gitignore  .gitmodules  .mcp.json  .nvim.lua  1000_STD_TESTS.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DOCSTRING_REVIEW.md  LICENSE.md  MCP_TOOLS_ROADMAP.md  MUSL_TOOLCHAIN_ISSUE.md  NEXT.md  NOTES.md  PARSER_STATUS.md  PONEGLYPH.md  README.md  RIOT_STYLE.md  TODO.md  TODOS.md  TODO_FOR_LATER.md  actors  bootstrap.py  claude-sandsay-without-mcp.md  debug_trees.ml  debug_trees_tusk.toml  dune  dune-project  dune-project.bak  dune-workspace  example.ml  install.sh  ocaml-toolchain.toml  opencode.json  output.txt  riot.toml  test_debug.ml  (+3 more)
.githooks/: pre-commit
compiler/stage0/: AGENTS.md  Cargo.toml  autoresearch.config.json  autoresearch.ideas.md  autoresearch.jsonl  autoresearch.md  build.rs  hello
compiler/stage0/examples/: hello.ml
compiler/stage0/src/: ast.rs  checker.rs  cli.rs  codegen.rs  command.rs  diagnostic.rs  driver.rs  fingerprint.rs  imported_types.rs  infer.rs  ir.rs  lexer.rs  lib.rs  linker.rs  main.rs  parser.rs  runtime.rs  signature.rs  signature_type_parser.rs  stdlib.rs  type_lowerer.rs
compiler/stage0/src/actor/: air.rs  frame.rs  lower.rs  mod.rs
compiler/stage0/src/checker/: blocks.rs  callable.rs  const_eval.rs  entrypoint.rs  lower.rs  mod.rs  shapes.rs  signature.rs  span.rs  tyir.rs  type_annotation.rs  types.rs
compiler/stage0/src/codegen/: abi.rs  static_eval.rs
compiler/stage0/src/infer/: env.rs  mod.rs  module.rs  scheme.rs  state.rs  types.rs  unifier.rs
compiler/stage0/src/ir/: actor.rs  hir.rs  rir.rs
compiler/stage0/src/lambda/: closure.rs  ir.rs  lower.rs  mod.rs  operators.rs
compiler/stage0/src/parser/: error.rs  literal.rs  mod.rs  source.rs  span.rs  type_syntax.rs
compiler/stage0/src/signature/: binary.rs  canonical.rs  names.rs  store.rs
compiler/stage0/tests/: fixtures.rs
compiler/stage0/tests/snapshots/: actor_ir__fibonacci_worker.snap  actor_ir__spawn_chain_two_hops.snap  diagnostic__tests_fixtures_diagnostics_actors_actor_local_annotation_unsupported.snap  diagnostic__tests_fixtures_diagnostics_actors_actor_nested_local_annotation_unsupported.snap  diagnostic__tests_fixtures_diagnostics_actors_duplicate_actor_binding.snap  diagnostic__tests_fixtures_diagnostics_actors_link_literal_non_actor.snap  diagnostic__tests_fixtures_diagnostics_actors_link_non_actor.snap  diagnostic__tests_fixtures_diagnostics_actors_link_unknown_actor_id.snap  diagnostic__tests_fixtures_diagnostics_actors_monitor_literal_non_actor.snap  diagnostic__tests_fixtures_diagnostics_actors_monitor_non_actor.snap  diagnostic__tests_fixtures_diagnostics_actors_monitor_unknown_actor_id.snap  diagnostic__tests_fixtures_diagnostics_actors_send_branch_actor_message_mismatch.snap  diagnostic__tests_fixtures_diagnostics_actors_send_generic_record_multi_arm_message_mismatch.snap  diagnostic__tests_fixtures_diagnostics_actors_send_non_actor.snap  diagnostic__tests_fixtures_diagnostics_actors_send_record_actor_message_mismatch.snap  diagnostic__tests_fixtures_diagnostics_actors_send_tuple_actor_message_mismatch.snap  diagnostic__tests_fixtures_diagnostics_actors_send_unknown_actor_id.snap  diagnostic__tests_fixtures_diagnostics_actors_send_unknown_pid.snap  diagnostic__tests_fixtures_diagnostics_actors_spawn_without_receive.snap  diagnostic__tests_fixtures_diagnostics_body_empty_main.snap  diagnostic__tests_fixtures_diagnostics_body_non_println_call.snap  diagnostic__tests_fixtures_diagnostics_body_println_no_args.snap  diagnostic__tests_fixtures_diagnostics_body_println_two_args.snap  diagnostic__tests_fixtures_diagnostics_body_two_statements.snap  diagnostic__tests_fixtures_diagnostics_entrypoints_duplicate_main.snap  diagnostic__tests_fixtures_diagnostics_entrypoints_empty.snap  diagnostic__tests_fixtures_diagnostics_entrypoints_main_has_params.snap  diagnostic__tests_fixtures_diagnostics_entrypoints_missing_main.snap  diagnostic__tests_fixtures_diagnostics_entrypoints_uppercase_main.snap  diagnostic__tests_fixtures_diagnostics_syntax_function_param_missing_comma.snap  diagnostic__tests_fixtures_diagnostics_syntax_invalid_char_length.snap  diagnostic__tests_fixtures_diagnostics_syntax_invalid_string_escape.snap  diagnostic__tests_fixtures_diagnostics_syntax_list_item_missing_comma.snap  diagnostic__tests_fixtures_diagnostics_syntax_list_spread_expression.snap  diagnostic__tests_fixtures_diagnostics_syntax_match_missing_arrow.snap  diagnostic__tests_fixtures_diagnostics_syntax_old_let_main.snap  diagnostic__tests_fixtures_diagnostics_syntax_record_field_missing_comma.snap  diagnostic__tests_fixtures_diagnostics_syntax_record_field_shorthand.snap  diagnostic__tests_fixtures_diagnostics_syntax_tuple_item_missing_comma.snap  (+270 more)
native/raml-bindgen/: Cargo.toml  README.md
native/raml-bindgen/src/: codegen.rs  main.rs  types.rs
native/raml-ffi/: Cargo.toml  README.md
native/raml-ffi/examples/: derive_demo.rs  ffi_usage.rs  mixed_enum.rs  simple_enum.rs  simple_struct.rs
native/raml-ffi/src/: lib.rs
native/raml-rt/: .lldbinit  Cargo.toml  README.md  check_opcodes.py  demo.html.bak  inspect_cmo.ml  minimal.out  playground.html  test.ml  test_byte.out  test_load_cmo.rs  test_marshal  test_marshal.rs  test_no_shebang.out  test_read_all  test_read_all.rs  test_simple.out
native/raml-rt/docs/: CLI_USAGE.md  COMPILER_RUNTIME_OVERVIEW.md  FEATURES.md  MISSING_FEATURES.md  NATIVE_RUNTIME.md  OCAML_COMPILATION_EXPLAINED.md  README.md  RT_SPEC.md  STATUS.md  WASM_DEMO.md  WASM_USE_CASES.md
native/raml-rt/examples/: handcrafted_test.rs  list_primitives.rs  load_cmo.rs  simple.ml  test_bytecode.rs
native/raml-rt/src/: lib.rs  main.rs  value.rs  wasm.rs
native/riot-bindgen/: AGENTS.md  Cargo.toml  README.md
native/riot-bindgen/src/: analyzer.rs  codegen.rs  main.rs
native/riot-ffi/: AGENTS.md  Cargo.toml  README.md
native/riot-ffi/examples/: derive_demo.rs  ffi_usage.rs  mixed_enum.rs  simple_enum.rs  simple_struct.rs
native/riot-ffi/src/: lib.rs
raml/: Cargo.toml
raml/src/: main.rs
test/: dune
(+6405 files in other folders)
