(library
 (package stack)
 (name port_finder)
 (modules port_finder)
 (libraries riot))

(test
 (package stack)
 (name ssl_test)
 (enabled_if
  (= %{env:OPAM_REPO_CI=false} false))
 (modules ssl_test)
 (deps fixtures/tls.crt fixtures/tls.key)
 (libraries riot port_finder x509 mirage-crypto-rng mirage-crypto-rng.unix))

(test
 (package stack)
 (name io_writer_test)
 (enabled_if
  (= %{env:OPAM_REPO_CI=false} false))
 (modules io_writer_test)
 (libraries riot))

(test
 (package stack)
 (name io_reader_test)
 (enabled_if
  (= %{env:OPAM_REPO_CI=false} false))
 (modules io_reader_test)
 (deps fixtures/io_readv.txt)
 (libraries riot))

(test
 (package stack)
 (name io_reader_large_test)
 (enabled_if
  (= %{env:OPAM_REPO_CI=false} false))
 (modules io_reader_large_test)
 (deps fixtures/ocaml_org.html)
 (libraries riot))

(test
 (package stack)
 (name io_readv_test)
 (enabled_if
  (= %{env:OPAM_REPO_CI=false} false))
 (deps fixtures/io_readv.txt)
 (modules io_readv_test)
 (libraries riot))

(test
 (package stack)
 (name io_writev_test)
 (enabled_if
  (= %{env:OPAM_REPO_CI=false} false))
 (modules io_writev_test)
 (deps generated/.gitkeep)
 (libraries riot))

; (test
;  (package stack)
;  (name net_timeout_test)
;  (enabled_if
;   (= %{env:OPAM_REPO_CI=false} false))
;  (modules net_timeout_test)
;  (libraries riot port_finder))

(test
 (package stack)
 (name net_addr_uri_test)
 (enabled_if
  (= %{env:OPAM_REPO_CI=false} false))
 (modules net_addr_uri_test)
 (libraries riot port_finder))

(test
 (package stack)
 (name net_reader_writer_test)
 (enabled_if
  (= %{env:OPAM_REPO_CI=false} false))
 (modules net_reader_writer_test)
 (libraries riot port_finder))

; (test
;  (package stack)
;  (name net_reader_writer_timeout_test)
;  (enabled_if
;   (= %{env:OPAM_REPO_CI=false} false))
;  (modules net_reader_writer_timeout_test)
;  (libraries riot port_finder))

(test
 (package stack)
 (name net_test)
 (enabled_if
  (= %{env:OPAM_REPO_CI=false} false))
 (modules net_test)
 (libraries riot port_finder))

(test
 (package stack)
 (name add_monitor_test)
 (modules add_monitor_test)
 (libraries riot))

(test
 (package stack)
 (name application_test)
 (modules application_test)
 (libraries riot))

; TODO(@leostera): fix this flakey test
; (test
;  (package stack)
;  (name link_processes_test)
;  (modules link_processes_test)
;  (libraries riot))

(test
 (package stack)
 (name process_registration_test)
 (modules process_registration_test)
 (libraries riot))

; (test
;  (package stack)
;  (name process_stealing_test)
;  (modules process_stealing_test)
;  (libraries riot))

(test
 (package stack)
 (name process_priority_test)
 (modules process_priority_test)
 (libraries riot))

(test
 (package stack)
 (name readme_example)
 (modules readme_example)
 (libraries riot))

(test
 (package stack)
 (name selective_receive_test)
 (modules selective_receive_test)
 (libraries riot))

(test
 (package stack)
 (name send_after_test)
 (modules send_after_test)
 (libraries riot))

(test
 (package stack)
 (name cancel_timer_test)
 (modules cancel_timer_test)
 (libraries riot))

(test
 (package stack)
 (name send_interval_test)
 (modules send_interval_test)
 (libraries riot))

(test
 (package stack)
 (name send_order_test)
 (modules send_order_test)
 (libraries riot))

(test
 (package stack)
 (name spawn_and_exit_test)
 (modules spawn_and_exit_test)
 (libraries riot))

(test
 (package stack)
 (name supervisor_shutdown_test)
 (modules supervisor_shutdown_test)
 (libraries riot))

(test
 (package stack)
 (name telemetry_test)
 (modules telemetry_test)
 (libraries riot))

(test
 (package stack)
 (name receive_timeout_test)
 (modules receive_timeout_test)
 (libraries riot))

(test
 (package stack)
 (name task_test)
 (modules task_test)
 (libraries riot))

(test
 (package stack)
 (name terminate_when_main_terminates_test)
 (modules terminate_when_main_terminates_test)
 (libraries riot))
