[package]
name = "stage0"
version = "0.1.0"
edition = "2024"

[dependencies]
camino = "1.2.2"
clap = { version = "4.6.1", features = ["derive"] }
inkwell = { version = "0.9.0", default-features = false, features = ["llvm22-1", "target-aarch64", "target-x86"] }
logos = "0.16.1"
miette = { version = "7.6.0", features = ["fancy"] }
snailquote = "0.3.1"
tempfile = "3.27.0"
thiserror = "2.0.18"
which = "8.0.2"

[dev-dependencies]
assert_cmd = "2.2.2"
insta = "1.47.2"
