[package]
name = "raml-bindgen"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "raml-bindgen"
path = "src/main.rs"

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
walkdir = "2.0"

[dev-dependencies]
raml-core = { path = "../raml-core" }
raml-ffi = { path = "../raml-ffi" }
