[package]
name = "raml-ffi"
version = "0.1.0"
edition = "2024"

[[example]]
name = "ffi_usage"
path = "examples/ffi_usage.rs"

[[example]]
name = "derive_demo"
path = "examples/derive_demo.rs"

[dependencies]
raml-core = { path = "../raml-core" }
raml-derive = { path = "../raml-derive" }

[dev-dependencies]
